--- a/impressum.html
+++ b/impressum.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles.css">
 </head>
+
 <body class="bg-black">
     <main class="gridContainer">
         <header id="header">
@@ -86,6 +87,7 @@
               </div>
             </div>
           </footer>
+          <script src="script.js"></script>
     </main>
 </body>
 </html>
