--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CO₂ Monitor</title>
+    <link rel="icon" type="image/x-icon" href="./images/Logo_mini.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body class="bg-black">
-
     <main class="gridContainer">
         <header id="header">
           <nav class="navbar navbar-expand-lg container-fluid" data-bs-theme="dark">
@@ -260,7 +260,7 @@
             <button type="submit" class="btn btn-dark">Senden</button>
           </form>
           <img src="./images/chris-lutke-VMJGmTuRVFs-unsplash.jpg" class="contact-image img-fluid rounded" alt="landscape image snowy mountain">
-      </section>
+        </section>
 
       <footer>
         <div class="footer-content">
